Ajustes em testes unitários

--- a/src/health-calc-dotnet/health-calc-console-dotnet/health-calc-console-dotnet.csproj
+++ b/src/health-calc-dotnet/health-calc-console-dotnet/health-calc-console-dotnet.csproj
@@ -10,4 +10,8 @@
     <RepositoryUrl>https://github.com/samueljmacedo/health-calc-pack-dotnet</RepositoryUrl>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="health-calc-pack-dotnet-sjmc" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
